feat: ordenação por READY, IN_PREPARATION, RECEIVED